force-app/main/default/staticresources/python/Disappear/src/objects/FPR_Only_Questions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Answer_Field_Name__c</fullName>
        <label>Answer Field Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message_2__c</fullName>
        <description>Extra error message text needs to be added to this field to compensate for more than 255 characters limit.</description>
        <label>Error Message 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_inActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be set &quot;true&quot; for questions/error message records which will not be required in the existing questionnaire flow.</description>
        <label>Is inActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Question_Response__c</fullName>
        <label>Parent Question Response</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Question__c</fullName>
        <label>Parent Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Content_2__c</fullName>
        <description>Extra question text needs to be added to this field to compensate for more than 255 characters limit.</description>
        <label>Question Content 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Content__c</fullName>
        <label>Question Content</label>
        <type>TextArea</type>
    </fields>
    <label>FPR Only Questions</label>
</CustomObject>